# ImageAssignment

./: CMakeLists.txt  README.md
ImageApp/: CMakeLists.txt  main.cpp
ImageApp/cmake/: AppCompileFlags.cmake
ImageLibrary/: CMakeLists.txt
ImageLibrary/cmake/: LibraryCompileFlags.cmake
ImageLibrary/include/ImageLibrary/: ImageConverter.hpp
ImageLibrary/src/: ImageConverter.cpp
cmake/: CompileFlags.cmake
